changed css for footer to absolute to see if this resolves the footer not showing at the bottom of the page in desktop screens, will be tested on heroku site

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,6 +51,7 @@ body {
 .footer {
     padding: 0%;
     margin: 0%;
+    position: absolute;
 }
 
 .footer p {  /* Selects text inside a <p> tag that is inside a .footer <div> */
